--- a/MCATFlask/templates/index.html
+++ b/MCATFlask/templates/index.html
@@ -2,52 +2,54 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GETTING STARTED WITH BRACKETS</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="../static/stylesheets/styles.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>MCATutor</title>
+    <meta name="description" content="An interactive chatbot to help you study for the MCAT.">
+    <link rel="stylesheet" href="../static/stylesheets/styles.css">
+  </head>
+  <body>
 
-      <div class='headerSection'>
-        <div class='header'>
-          <img id="logo" src="../static/MCATlogo-01.png" id='logo'>
-          <div id='subjects'>
-              <ul>
-                  <li>Biology || </li>
-                  <li>Physics || </li>
-                  <li>Chemistry || </li>
-                  <li>Behavioral Science</li>
-              </ul>
-          </div>
-        </div>
-        <div class="h_line">
+    <div class='headerSection'>
+      <div class='header'>
+        <img id="logo" src="../static/MCATlogo-01.png" id='logo'>
+        <div id='subjects'>
+          <ul>
+            <li>Biology || </li>
+            <li>Physics || </li>
+            <li>Chemistry || </li>
+            <li>Behavioral Science</li>
+          </ul>
         </div>
       </div>
+      <div class="h_line">
+      </div>
+    </div>
 
 
-        <div id='bodybox'>
-          <div id='chatborder' style="overflow-y: scroll; height: 425px">
-              <!--Where bubbles will be dynamically added-->
-          </div>
-        </div>
+    <div id='bodybox'>
+      <div id='chatborder' style="overflow-y: scroll; height: 425px">
+        <!--Where bubbles will be dynamically added-->
+      </div>
+    </div>
 
-         <input type="text" name="chat" id="chatbox" placeholder="Hi there! Type here to talk to me." onfocus="placeHolder()">
+    <input type="text"
+           name="chat"
+           id="chatbox"
+           placeholder="Hi there! Type here to talk to me."
+           onfocus="placeHolder()">
 
-         <input type= "image" title="Click to enable/disable MCATutor's audio response" id="speechToggle" onclick="changeSpeechSetting()" src="../static/images/soundOn.png" />
-
-
-          <br>
-
-
-
-    </body>
+    <input type="image"
+           title="Click to enable/disable MCATutor's audio response"
+           id="speechToggle"
+           onclick="changeSpeechSetting()"
+           src="../static/images/soundOn.png" />
+    <br>
+  </body>
 </html>
 
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="../static/controllers/interaction.js"></script>
-
